syntax = "proto3";

option csharp_namespace = "Rpg.Grpc";

package example;

service Game {
	rpc EnterWorld(WorldRequest) returns (WorldResponse);
	rpc ChangePlayerName(NameRequest) returns (PlayerResponse);
}

message PlayerResponse {
	int64 realCash = 1;
	int64 freeCash = 2;
	string name = 3;
}

message PointResponse {
	int32 id = 1;
	int32 num = 2;
	int64 amount = 3;
}

message WorldRequest {
	string guid = 1;
}

message WorldResponse {
	string token = 1;
	PlayerResponse player = 2;
	repeated PointResponse points = 3;
}

message NameRequest {
	string name = 1;
}